# postgres-migrations

./: README.md  pyproject.toml
scripts/: generateMigrations.sh
sql/: init.sql  init_snapshot.sql
sql/migrations/: 1722937534_first_migration.down.sql  1722937534_first_migration.up.sql
