[project]
name = "db-migrations"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mergd", email = "24722014+mergd@users.noreply.github.com" }
]
dependencies = [
    "migra>=3.0.1663481299",
    "setuptools>=72.1.0",
    "psycopg2>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/db_migrations"]
